--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,8 +1,9 @@
 .containerCard {
     width: 90%;
-    margin-left:5%;
+    margin-left: 5%;
     margin-bottom: 1%;
     display: flex;
+    background-color: rgb(255, 255, 255);
     border: solid;
     border-color: rgb(184, 184, 184);
     box-shadow: 10px 5px 5px rgb(61, 61, 61);
@@ -11,29 +12,38 @@
 .imagen {
     border-radius: 1000px;
     width: 100%;
-    margin-top: 20%;
-    margin-left: 5%;
+    margin-top: 30%;
+    margin-left: 40%;
 }
 
 .datosContacto {
-    margin-left: 2%;
+    margin-left: 8%;
     margin-top: 1%;
     width: 80%;
 }
 
 .nombreContacto {
-    margin-bottom: 4%;
+    margin-bottom: 3%;
 }
 
 .botonesFinal {
     width: 10%;
 }
 
-.botonEditar, .botonEliminar {
+.botonEditar {
     border: none;
     background-color: white;
-    margin: 5%;
-    margin-top: 10%;
-    margin-right: 5%;
-    font-size: x-large;
+    margin: 20%;
+    margin-top: 20%;
+    margin-right: 15%;
+    font-size: xx-large;
+}
+
+.botonEliminar {
+    border: none;
+    background-color: white;
+    margin: 20%;
+    margin-top: 20%;
+    margin-right: 15%;
+    font-size: larger;
 }
